# Digital-Race

./: .gitignore  README.md
Object_Detection/: README.md
Semantic_Segmentation/: Goodgame_GPU.ipynb  README.md  goodgame-gpu.ipynb
detection/: Seg_Local.ipynb
detection/Train/: README.md
object_detection/: README.md  README_vi.md  convert.py  model.py  object_detection.ipynb  predict.py  preprocessing_image.py  signnames.csv  ssd7_main_training.ipynb  train.py
role/: README.md
segmentation/: README.md
src/: README.md  README_vi.md
src/datmo/config/: default.rviz
src/datmo/launch/: datmo.launch
src/datmo/src/: cluster.cpp  cluster.hpp  datmo.cpp  datmo.hpp  main.cpp
src/dira_mpu9250_controller/src/: dira_mpu9250_controller.cpp
src/dira_pca8266_controller/: README.md
src/dira_pca8266_controller/include/: JHPWMPCA9685.h  dira_pca9685_controller.h
src/dira_pca8266_controller/launch/: run_car.launch
src/dira_pca8266_controller/scripts/: control_manual.py  faster.py  game.py  hand_control.py  joystick.py  joystick_angle.py
src/dira_pca8266_controller/src/: JHPWMPCA9685.cpp  dira_pca9685_controller.cpp  dira_pca9685_subscriber.cpp  (+1 more)
src/dira_peripheral_controller/: CMakeLists.txt  README.md  package.xml
src/dira_peripheral_controller/launch/: dira_peripheral_controller.launch
src/dira_peripheral_controller/src/: dira_peripheral_controller.cpp  dira_peripheral_subscriber.cpp
src/fptu_architecture/: CMakeLists.txt  README.md  package.xml
src/goodgame/: CMakeLists.txt  package.xml  setup.py
src/mapping/: CMakeLists.txt
tutorials/: Readme.md
(+101 files in other folders)
