<?xml version="1.0"?>
<package>
  <name>dira_peripheral_controller</name>
  <version>0.0.0</version>
  <description>Dira_peripheral_controller</description>
  <maintainer email="hieupm5@fpt.com.vn">hieupm5</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msg</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msg</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
